# neo-space

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
frontend/: index.html  package.json  styles.css  webpack.config.js
frontend/js/: main.js
hello-wasm/: index.js
hello-wasm/src/: lib.rs
monorepo/digital-ocean-app/: package.json
monorepo/files-worth-saving/: just-grid.html
monorepo/frontend/: package.json  styles.css
monorepo/hello-wasm/: Cargo.toml  README.md  webpack.config.js
monorepo/infinite-paint-wasm/: Cargo.toml  index.js  package.json  styles.css  webpack.config.js
monorepo/infinite-paint-wasm/src/: drawing.rs  lib.rs
monorepo/makeshift-canvas/: index.html  package-lock.json  webpack.config.js
monorepo/paint-wasm/: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
monorepo/webgpu-rendered-grid/: package-lock.json  package.json
rendering-engine/: Cargo.toml
rust-packages/: README.md
rust-packages/hello-wasm/: package-lock.json
rust-packages/infinite-paint-wasm/: Cargo.toml  index.html  package-lock.json  webpack.config.js
rust-packages/macro-cosmos/: Cargo.toml  package-lock.json  package.json
rust-packages/macro-cosmos/src/: lib.rs  rendering.rs
rust-packages/macro-cosmos/www/: eventHandlers.js  index.html  index.js  konvaSetup.js  renderer.js  shapeManagement.js
rust-packages/makeshift-canvas/: index.html  package-lock.json  package.json  styles.css
splash_page/: index.html
src/: canvas_state.rs  cursor.rs  grid.rs  main.rs  scrollbar.rs  user_action_mode.rs
(+23 files in other folders)
