[package]
edition = "2021"
name = "infinite-paint-wasm"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'Performance'
]}